--- a/gog.org
+++ b/gog.org
@@ -1547,7 +1547,7 @@ More purple-pink gum would be exposed with every high screech-like roar.
 
 It was pissed.
 
-Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting with the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp.
+Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting with the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp. There was no name for its color.
 
 This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and Grav hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to glowing with a few puffs of breath beforehand.
 
