--- a/gog.org
+++ b/gog.org
@@ -1541,13 +1541,13 @@ As if in place of saliva, the tiger dripped thick, almost undiluted blood from i
 
 To Grav and Gog, the cat simply drooled blood.
 
-In addition to the thick laminar blood, there was bright pink foam coming from the sides of its mouth in pluses, a bit more pushed out with each breath. It fell to the floor in small pink piles.
+In addition to the thick laminar blood, there was bright pink foam coming from the sides of its mouth in pluses, a bit more pushed out with each breath. It fell to the floor in small pink piles. There was no name for this color.
 
 More purple-pink gum would be exposed with every high screech-like roar.
 
 It was pissed.
 
-Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting with the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp. There was no name for its color.
+Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting with the cat's brow, where it shattered, covering the cat with lighted pine pitch from the nearly-full lamp.
 
 This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and Grav hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to glowing with a few puffs of breath beforehand.
 
