--- a/gog.org
+++ b/gog.org
@@ -1551,7 +1551,9 @@ Crazed, the baby grabbed the only lit lamp and smartly slung it hard, connecting
 
 This roused the men, both of whom scrambled together in Grav's kit to get his lamp. Gog found it first and Grav hurriedly lit some dry litter from the hide's stone floor with embers from Oh-Mas' pipe, which he set to glowing with a few puffs of breath beforehand.
 
-With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being. The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades of made of fire. The liquid ran down his back, over his flanks and also down the outside of its front legs. And the flame followed.
+With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being.
+
+The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades of made of fire. The liquid ran down his back, over his flanks and also down the outside of its front legs. And the flame followed.
 
 The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a circle as if thinking of lying down.
 
