--- a/gog.org
+++ b/gog.org
@@ -1553,7 +1553,7 @@ This roused the men, both of whom scrambled together in Grav's kit to get his la
 
 With a heavier dried leaf from this he finally lit his lamp. Looking up he realized that light availability was not a problem for the time being.
 
-The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades of made of fire. The liquid ran down his back, over his flanks and also down the outside of its front legs. And the flame followed.
+The cat's front half was fully alight. It had a sort of mane of standing hackles between its shoulder blades made of fire. The liquid ran down his back, over his flanks and also down the outside of its front legs. And the flame followed.
 
 The cat spent a few drop-stone seemingly calmed by the fire. It was pacing in a circle as if thinking of lying down.
 
