--- a/gog.org
+++ b/gog.org
@@ -1561,7 +1561,7 @@ But then the cat snapped.
 
 It charged the opening, propelling its whole body with hind legs and making synchronized swats with both fore limbs, claws extended. The cat was doing a sort of wheelie, propping up the front half of its body with accelerating rage.
 
-It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known as 'fuck your shit up' mode.].
+It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
 
 xxx sure seems like if cats like that walking around, no one would go outside.
 
