--- a/gog.org
+++ b/gog.org
@@ -1565,10 +1565,9 @@ It's swatting, almost clapping, but with paws not quite meeting, got more rapid 
 
 xxx sure seems like if cats like that walking around, no one would go outside.
 
-
 So long as it stayed where it was, all was safe.
 
-Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
+Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
 
 On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly, but fully aware for a palm or so, you could see things in the night sky for which no xxx had anything but guesses. Most of what you could not see from the mouth of your cave were wispy and ephemeral looking, like carefully pulled and stopped <-xxx satin-cotton; thicker in some places, thinner in others, but with noticeable patterns and hints at "structure".
 
