--- a/gog.org
+++ b/gog.org
@@ -1569,39 +1569,53 @@ So long as it stayed where it was, all was safe.
 
 Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
 
-yyy
+On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky for which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
-On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly, but fully aware for a palm or so, you could see things in the night sky for which no xxx had anything but guesses. Most of what you could not see from the mouth of your cave were wispy and ephemeral looking, like carefully pulled and stopped <-xxx satin-cotton; thicker in some places, thinner in others, but with noticeable patterns and hints at "structure".
+If the sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from anywhere. This gives you an idea of the kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
 
-One of these high-night-ghosts was a swirl shape, though one seen at an angle[fn:: Andromeda. They called it 'Ender's-Sink'.], a more relatable example to most Crec would be the appearance of a whirlpool going down a sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
+One of these high-night-ghosts[fn:: Nebulae] was a kind of swirl shape, though one seen at an angle[fn:: Andromeda.] It had been given the name 'Ender's-Sink'.
 
-The tooth-cat had eyes made of impossible colors that swirled down the drain of its eye. It's soul <-xxx, perhaps.
+A more relatable example to most Crec would be the appearance of a whirlpool going down a sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
 
-The cat took on an otherworldly character, it was as much speaking to them as it was trying to kill and eat them. The words had no anger. They just "were".
+The tooth-cat had eyes made of impossible colors that swirled down the drain of its eye; it's soul, perhaps.
+
+The men stared into these eyes as the swirling became more intense. Light was /coming/ from its eyes.
+
+The cat took on an otherworldly character. The men could sense a kind of phase change in the cat. There was something "there" that was not animal. The kind of sense one got when talking to another person, or looking into a raven's eye.
+
+It spoke. I didn't speak using a voice, but it was clear to them just the same. Its words just /were/.
 
 #+begin_quote
-Do I not suffer too? Behold my fury and my might. I only must eat, like you, I am mortal. To kill you without mercy is as wrong to me as it is for you to do such to a marmot <-xxx Now, having violated The Order, I must make you suffer. And I will.
+Do I not suffer too? Behold my fury and my might. Like you I must eat to live. I am mortal. To kill /you/ without mercy is as wrong to me as it is for you to do such to a marmot. You have broken The Order, wise ape.
 #+end_quote
 
 "He's talking.", said Grav.
 
-"No he's not." Is all Gog said as he continued to stare.
+"No he's not.", Gog whispered as he continued to stare.
 
-Both staring and both feeling the reality of what just happened, they watched the enormous animal do a graceful turn-about <-xxx that seemed to happen in slow motion, with the beast looking over it's muscular shoulder as he turned.
+Both stunned by the unreality of what was happing, they watched the enormous animal do a graceful turn-about that seemed to happen in slow motion, with the beast looking over it's muscular shoulder as he turned.
 
 #+begin_quote
 This isn't over.
 #+end_quote
 
-The cat accelerated directly away from the hide, where his flickering light could be seen peeking through the trees as he climbed the plane, seemingly for the stars.
+The cat accelerated directly away from the hide, not bothering to alter his course for several arm-thick trees that he snapped easily.
 
-The next morning had the unfortunate, bleary, "all too real" feeling of a night having been overdone, as if reality did in fact have an anchor and this is what finding a new anchorage <-xxx felt like this. It was just another chore.
+His flickering light could be seen peeking through the trees as he climbed the plain, seemingly for the stars.
+
+Oh-Mas could be seen shaking his head[fn:: Do we need to document forest-child head movement?!] slowly as if out of descust while he watched the cat's retreat.
+
+He turned to the men and made a "Hummmphf!" that conveyed annoyance more than relief. The baby sat back down on the floor and worked on relighting his pipe.
+
+# new section or something? are there two lines here?
+
+The next morning had the unfortunate bleary, "all too real" feeling of a night having been overdone, as if reality did in fact have an anchor and this is what finding a new anchorage felt like.
 
 The unmistakable scent of barbecued game wafted in the air outside. It had the /smell/ of an epic last-night.
 
 Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin stubble. His eyes, while not psychedelic, were quite a sight.
 
-"What", is all Gog said as his eyes darted around.
+"What.", is all Gog said as his eyes darted around.
 
 "You've got 'gog' in your eye, scout.", said Grav helpfully. "Let's just fast-forward <-xxx and talk about it later. We need to xxx move fast xxx."
 
@@ -1611,17 +1625,15 @@ The way to deal with tooth-cats when not in a convenient stone hide is simple: D
 
 First, be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
 
-Two men (women were discouraged involvement, which wasn't necessary so long as it was just one cat vs the party, in which case, two men did the job, if barely.
+Two men[fn:: Women were discouraged from involvement. So long as it was just one cat vs the party, in which case, two men did the job, if barely.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two, cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
 
-Two men with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two, cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
+Second, consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it; not an easy thing to get right. Lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it. The right tree was too small for a cat to climb and too big for it to knock down.
 
-Second, consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it; not an easy thing to get right. Lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it.
-
-Third, consider a nice, deep hole. It will need to be at least one and one half of one part the cat's arm-length, which was "xxx", and if the opening is subject to digging, forget it.
+Third, consider a nice, deep hole. It will need to be at least one and one half of one part the cat's forearm length, which was "xxx", and if the opening is subject to digging, forget it.
 
 Consider a /lot/ of fire. Tooth-cats are skittish of fire, but they are also not easily impressed.
 
-Incidentally, forget about: standing your ground, appearing large, being frighteningly loud.
+Incidentally, forget about: standing your ground, appearing large, or being frighteningly loud.
 
 Spears were popular because the above, unless prepared, spears were pretty standard and reliable.
 
@@ -1629,13 +1641,13 @@ Between the men they had about 8-9 cat-grade spears.
 
 And potentially can involve fire, as seen already.
 
-The men just planned to run. Shout and be conspicuous, but run. Shouting will not scare off a cat. But a cat hearing something "weird" approaching gradually will more likely than not gamble against hanging around. Of course if hey knew the sounds came from savory apes, they would calculate differently. But they wouldn't.
+The men just planned to run. Shout and be conspicuous, but run. Shouting will not scare off a cat. But a cat hearing something "weird" approaching gradually will more likely than not gamble against hanging around. Of course if they knew the sounds came from savory apes, they would calculate differently. But they wouldn't know.
 
-They had to hurriedly pack, and say what counts as a "long goodbye" to someone they did indeed feel indebted to and fond of, with some crippling constraints. /'Hate to do this, gotta go...!'/
+They had to hurriedly pack, and say what counts as a "long goodbye" to someone they did indeed feel indebted to and fond of, xxx with some crippling constraints. /'Hate to do this, gotta go...!'/
 
 Oh-Mas patted the two men gently on the knees and smiled a lot, there were clearly, on both sides, a lot of concepts that were frustratingly hard to convey. There was genuine regret at having to part.
 
-With Oh-Mas waving from inside the barricaded hide, they two men continued to send apologetic and grateful signs of "goodbye" while walking backwards. Rounding a blind corner, they both turned and transitioned to near sprint. This was wasteful of energy, but the waste was worth subtracting from time spent just here, in this active zone.
+With Oh-Mas waving from inside the barricaded hide, they two men continued to send apologetic and grateful signs of "goodbye" while walking backwards. Rounding a blind corner, they both turned and transitioned to near sprint. This was wasteful of energy, but the waste was worth xxx subtracting from time spent just here, in this active zone.
 
 The men both began to sing loudly while Oh-Mas could still hear them.
 
@@ -1643,13 +1655,13 @@ The men both began to sing loudly while Oh-Mas could still hear them.
 
 The forest-child of course had no idea what they were singing about, but could /feel/ the tune more or less as intended and thought fondly of the two Giants.
 
-They finally broke out of Small Woods at a slowing sprint. They scared, and were scared by some gazelles and had to leap over a constrictor snake that would have easily eaten them had it been aware[fn:: In this case, knives. And hopefully another male traveling companion or at least a free arm.].
+They finally broke out of Small Woods at a slowing sprint. They scared, and were scared by some gazelles and had to leap over a constrictor snake that would have easily eaten them had it been aware[fn:: In this case the trick is: knives, and hopefully another male traveling companion or at least a free arm.].
 
 Snare Plains lay before them, as the "zones" aren't well defined by either time or location, they continued to scan their assigned half and shout-sing whatever tune seemed appropriate in whatever way struck them as appropriate[fn:: Song selection was this important. "No singing" was a popular choice too for a number of reasons. The Crec and many other cavemen have invented all sorts of noise makers. The more Unnatural the sound the better.].
 
 The lizard-bird was spotted while both men were doing a scan of the sky ahead of them, on the verge of the woods. And they tentatively scanned /behind/ them as they emerged from the woods. Now spotted, their calculations could be made.
 
-It was circling a particular spot far to the west. Another bird of equal size[fn:: There was little difference in size among lizard-bird once they reached pointy-xxx adulthood, before which they would not bother seeking territory but more live as criminals in another's territory xxx], at 180-deg <-xxx on the other side of its orbit circled the same spot. It would half <-xxx do we just ... narrator needs to be consistent. numbers, Crecspeak, all that  xxx a palm at least before the lizard-bird got get anywhere near them. And it had a challenger. They were no more attractive than any number of things it would spot along the way. And they were plenty prepared, with plenty of time to get more prepared. <-xxx wat xxx
+It was circling a particular spot far to the west. Another bird of equal size[fn:: There was little difference in size among lizard-bird once they reached pointy-xxx adulthood, before which they would not bother seeking territory but more live as criminals in another's territory xxx], at 180-deg <-xxx on the other side of its orbit circled the same spot. It would half <-xxx do we just ... narrator needs to be consistent. numbers, Crecspeak, all that  xxx a palm at least before the lizard-bird could get anywhere near them. And it had a challenger. They were no more attractive than any number of things it would spot along the way. And they were plenty prepared, with plenty of time to get more prepared. <-xxx wat xxx
 
 The plains were almost boring in the lack of threats it presented this day. They kept a steady, efficient, springy run for palm upon palm.
 
