--- a/gog.org
+++ b/gog.org
@@ -1569,7 +1569,9 @@ So long as it stayed where it was, all was safe.
 
 Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
 
-On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky for which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
+yyy
+
+On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
 If the sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from anywhere. This gives you an idea of the kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
 
@@ -1603,7 +1605,7 @@ The cat accelerated directly away from the hide, not bothering to alter his cour
 
 His flickering light could be seen peeking through the trees as he climbed the plain, seemingly for the stars.
 
-Oh-Mas could be seen shaking his head[fn:: Do we need to document forest-child head movement?!] slowly as if out of descust while he watched the cat's retreat.
+Oh-Mas could be seen shaking his head[fn:: Do we need to document forest-child head movement?!] slowly as if out of disgust while he watched the cat's retreat.
 
 He turned to the men and made a "Hummmphf!" that conveyed annoyance more than relief. The baby sat back down on the floor and worked on relighting his pipe.
 
