--- a/gog.org
+++ b/gog.org
@@ -1573,7 +1573,7 @@ yyy
 
 On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
-If the sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from anywhere. This gives you an idea of the kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
+If the sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from anywhere. This was this same kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
 
 One of these high-night-ghosts[fn:: Nebulae] was a kind of swirl shape, though one seen at an angle[fn:: Andromeda.] It had been given the name 'Ender's-Sink'.
 
