--- a/gog.org
+++ b/gog.org
@@ -1626,19 +1626,21 @@ Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin s
 
 "What.", is all Gog said as his red eyes darted about.
 
-"You've got 'gog' in your eye, scout.", said Grav helpfully. "Let's just fast-forward <-xxx and talk about it later. We need to xxx move fast xxx."
+"You've got 'gog' in your eye, scout.", said Grav helpfully. "Let's just talk about it later. We need to move."
 
 It was just after dawn and because of, let's face it, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
 
-The way to deal with tooth-cats when not in a convenient stone hide is simple: Don't. And if that fails there a number of good tips and tricks that kept the smart apes on top.
+The way to deal with tooth-cats when not in a convenient stone hide is simple: Don't find yourself needing to. And if that fails there a number of good tips and tricks that kept the smart apes on top.
 
 First, be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
 
-Two men[fn:: Women were discouraged from involvement. So long as it was just one cat vs the party, in which case, two men did the job, if barely.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two, cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
+Two men[fn:: Women were discouraged from involvement. So long as it was just one cat two men did the job, if barely. A coordinated attack involving more than one cat was rare, but a real horror show when it happened.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two, cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
 
-Second, consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it; not an easy thing to get right. Lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it. The right tree was too small for a cat to climb and too big for it to knock down.
+A very strong and skilled single man, if also lucky, could wield a spear in each hand and fend of a tooth-cat.
 
-Third, consider a nice, deep hole. It will need to be at least one and one half of one part the cat's forearm length, which was "xxx", and if the opening is subject to digging, forget it.
+Second, consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it. It's not an easy thing to get right. There are lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it. The right tree was too small for a cat to climb and too big for it to knock down.
+
+Third, consider a nice deep hole. It will need to be at least one and one half of one part in depth of the cat's forearm reach, which could be as much as a man. If the opening is subject to digging, forget it.
 
 Consider a /lot/ of fire. Tooth-cats are skittish of fire, but they are also not easily impressed.
 
