--- a/gog.org
+++ b/gog.org
@@ -1626,9 +1626,7 @@ Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin s
 
 "What.", is all Gog said as his red eyes darted about.
 
-"You've got 'gog' in your eye, scout.", said Grav helpfully. He was repacking both of their kits, forgetting about the remains of Gog's lamp, except for the wick
-# do we explain?
-, which was perfectly fine, and also rather new.
+"You've got 'gog' in your eye, scout.", said Grav helpfully. He was repacking both of their kits, forgetting about the remains of Gog's lamp, except for the wick, which was perfectly fine, and also rather new.
 
 He was smiling and bobbing his head. "Let's just talk about it later. We need to move."
 
