--- a/gog.org
+++ b/gog.org
@@ -1628,7 +1628,7 @@ Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin s
 
 "You've got 'gog' in your eye, scout.", said Grav helpfully. He was repacking both of their kits, forgetting about the remains of Gog's lamp, except for the wick, which was perfectly fine, and also rather new.
 
-He was smiling and bobbing his head. "Let's just talk about it later. We need to move."
+Grav was smiling and bobbing his head. "Let's just talk about it later. We need to move."
 
 It was just after dawn and because of, let's face it, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
 
