--- a/gog.org
+++ b/gog.org
@@ -1630,7 +1630,7 @@ Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin s
 
 Grav was smiling and bobbing his head. "Let's just talk about it later. We need to move."
 
-It was just after dawn and because of, let's face it, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
+It was just after dawn and because of, they were well aware, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
 
 The way to deal with tooth-cats when not in a convenient stone hide is simple: Don't find yourself needing to. And if that fails there a number of good tips and tricks that kept the smart apes on top.
 
