--- a/gog.org
+++ b/gog.org
@@ -1632,11 +1632,11 @@ Grav was smiling and bobbing his head. "Let's just talk about it later. We need 
 
 It was just after dawn and because of, they were well aware, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
 
-The way to deal with tooth-cats when not in a convenient stone hide is simple: Don't find yourself needing to. And if that fails there a number of good tips and tricks that kept the smart apes on top.
+The best way to deal with tooth-cats was to avoid them, of course. If that fails there a number of good tips and tricks that kept the smart apes on top.
 
 First, be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
 
-Two men[fn:: Women were discouraged from involvement. So long as it was just one cat two men did the job, if barely. A coordinated attack involving more than one cat was rare, but a real horror show when it happened.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two, cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
+Two men[fn:: Women were discouraged from involvement. So long as it was just one cat two men did the job, if barely. A coordinated attack involving more than one cat was rare, but a real horror show when it happened.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
 
 A very strong and skilled single man, if also lucky, could wield a spear in each hand and fend of a tooth-cat.
 
